<resources>
    <string name="app_name">Примеры с dimlix.com</string>
    <string name="network_monitoring_descr">Статус текущего подключения к сети</string>
    <string name="connected">Подключено</string>
    <string name="network_monitoring">Мониторинг наличия сети</string>
    <string name="no_connection">Нет подключения</string>
    <string name="wifi">WiFi</string>
    <string name="cellurar">Мобильная сеть</string>
    <string name="other_connection">Нет WiFi и сотовых данных, но есть что-то другое, например Bluetooth</string>
    <string name="read_us_in_internet">Читайте статьи, примеры и заметки</string>
    <string name="no_sample_found">Некорректная ссылка на пример</string>
    <string name="go_to_article">Перейти к статье</string>
    <string name="lottie_animation">Анимация через Lottie</string>
    <string name="click_to_animate">Нажмите на картинку для\nанимации на следующий шаг</string>
    <string name="in_app_v_3">Покупки. In-app Billing v3</string>
    <string name="bottom_sheet_drawer">BottomSheet. Выдвигающийся экран</string>
    <string name="google_ads"><![CDATA[Реклама межстраниц —> WebView]]></string>
    <string name="main_view_content">Основной контент</string>
    <string name="peek_height_descr">Peek размером 100dp\nМожно вытянуть</string>
    <string name="bottom_sheet_view_content">Остальной контент всплывающей панели</string>
    <string name="bottom_sheet_view_content_half">Панель на пол экрана</string>
    <string name="collapse_panel">Свернуть панель</string>
    <string name="open_half_panel">Открыть панель на 1/2</string>
    <string name="open_panel">Открыть панель</string>
    <string name="collapse_peek">Опустить панель до Peek</string>
    <string name="banner">Баннер</string>
    <string name="interst_not_loaded">Реклама еще не готова</string>
    <string name="in_app">In app примеры</string>
    <string name="in_app_descr">Кнопки ниже проводят реальную оплату.\n\nВы можете собрать данное приложение из исходников и заменить оплату на тестовую.\n\nВаша поддержка поможет развивать проект и создавать еще больше примеров под Android.</string>
    <string name="infinite_time_payment">Не восстанавливаемые за %s</string>
    <string name="one_time_payment_value">Единоразовая за %s</string>
    <string name="consume_one_time">\"Использовать\" единоразовую</string>
    <string name="subscription_value">Подписка за %s</string>
    <string name="bought_number">Куплено раз: %d</string>
    <string name="go_to_source">Перейти к исходникам</string>
    <string name="billing_not_available">Покупки не поддерживаются устройством</string>
    <string name="one_time_payment_not_supported">Покупки не поддерживаются</string>
    <string name="subscription_not_supported">Подписки не поддерживаются</string>
    <string name="already_bought">Уже куплено</string>
    <string name="not_bought_yet">Еще не куплено</string>
    <string name="already_subscribed">Уже подписаны</string>
    <string name="vpn">VPN</string>
    <string name="go_to_next_fragment">Вперед</string>
    <string name="back">Назад</string>
    <string name="animated_fragments">Анимированные переходы во фрагментах</string>
</resources>
