<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="64dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collapse_panel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCloseToPeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collapse_peek" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOpenHalf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_half_panel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_panel" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/containerBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>