<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:paddingTop="64dp"
            android:text="@string/bottom_sheet_view_content_half" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bottom_sheet_view_content" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/peek_height_descr" />

    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="center"
        android:layout_gravity="end"
        android:src="@android:drawable/arrow_up_float" />

</FrameLayout>